# VPNOptimization

./: .gitignore  .gitignore.txt  CMakeLists.txt  CmakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
VPNDLL/: CMakeLists.txt
VPNDLL/include/: preCompiled.h
VPNDLL/include/Draw/: Draw.h
VPNDLL/include/IO/: io.h
VPNDLL/include/Shape/: Edge2D.h  Line2D.h  Point2D.h  Vector2D.h
VPNDLL/include/Skeleton/: RidgeFilter.h  SkeletonGraph.h  SkeletonJoint.h
VPNDLL/include/Test/: Test_Overlap.h
VPNDLL/include/VPN/: BSPNode.h  HeatMap.h  House.h  Station.h  StationNet.h  VPNTypeDefinition.h  VpnOptimizerBySkeleton.h
VPNDLL/src/Draw/: Draw.cpp
VPNDLL/src/IO/: io.cpp
VPNDLL/src/Shape/: Edge2D.cpp  Line2D.cpp  Point2D.cpp  Vector2D.cpp
VPNDLL/src/Skeleton/: RidgeFilter.cpp  SkeletonGraph.cpp  SkeletonJoint.cpp
VPNDLL/src/Test/: Test_Overlap.cpp
VPNDLL/src/VPN/: BSPNode.cpp  HeatMap.cpp  House.cpp  Station.cpp  StationNet.cpp  VpnOptimizerBySkeleton.cpp
VPNRun/: CMakeLists.txt  RoomScan.cpp
VPNTest/: CMakeLists.txt  bsp.objpts  bsp.top  bspEdges.csv  test.DXF  test.cpp  test.top
data/: dataMap.csv
data/Chen_Outer1/: Chen_Outer1.DXF  Chen_Outer1.objpts  Chen_Outer1.top
data/Chen_Outer1/Chen_Outer1/: bspEdges.csv  overlap.csv  readDxf.csv  readTop.csv
data/Outdoor_CCIT/: Outdoor_CCIT.DXF  Outdoor_CCIT.objpts  Outdoor_CCIT.top
data/Outdoor_CCIT/Outdoor_CCIT/: bspEdges.csv  overlap.csv  readTop.csv
data/Outdoor_Crowsnest/: Crowsnest.DXF  Crowsnest.objpts  Outdoor_Crowsnest.dxf
data/Outdoor_Crowsnest/Outdoor_Crowsnest/: bspEdges.csv  overlap.csv  readTop.csv
data/TUB1/: tub1.DXF  tub1.objpts  tub1.top
data/TUB1/TUB1/: bspEdges.csv  overlap.csv  readDxf.csv  readTop.csv
data/Xu/: Xu.DXF  Xu.objpts  Xu.top
data/Xu/Xu/: bspEdges.csv  overlap.csv  readDxf.csv
data/Zeng_SceneA/: Zeng_Scene.DXF  Zeng_Scene.objpts  Zeng_Scene.top  bsp.objpts  bsp.top  move_min.objpts  move_min.top  overlap.csv
data/Zeng_SceneA/Zeng_SceneA/: bspEdges.csv  overlap.csv  readDxf.csv  readTop.csv
data/noichl/: noichl.DXF  noichl.objpts  noichl.top
data/noichl/noichl/: bspEdges.csv  overlap.csv  readDxf.csv  readTop.csv
include/Draw/: Draw.h
include/IO/: io.h
include/Shape/: Edge2D.h  Line2D.h  Point2D.h  Vector2D.h
include/Skeleton/: RidgeFilter.h  SkeletonGraph.h  SkeletonJoint.h
include/Test/: Test_Overlap.h
include/VPN/: BSPNode.h  HeatMap.h  House.h  Station.h  StationNet.h  VPNTypeDefinition.h  VpnOptimizerBySkeleton.h
run/: CMakeLists.txt  RoomScan.cpp
src/: RoomScan.cpp
src/IO/: io.cpp
src/Shape/: Edge2D.cpp  Line2D.cpp  Point2D.cpp  Vector2D.cpp
src/Skeleton/: RidgeFilter.cpp  SkeletonGraph.cpp  SkeletonJoint.cpp
src/Test/: Test_Overlap.cpp
src/VPN/: BSPNode.cpp  HeatMap.cpp  House.cpp  Station.cpp  StationNet.cpp  VpnOptimizerBySkeleton.cpp
test/: CMakeLists.txt  ioTest.cpp  test.DXF  test.objpts
